# first-neural-network-with-mnist-data

./: README.md  predict.py  pyproject.toml  resample.py  train.bat  train.py  web.bat  web.py
.devcontainer/: devcontainer.json
data/: mnist_model.keras
