[project]
name = "first-neural-network-with-mnist-data"
version = "0.1.0"
description = "MNIST Neural Network with Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras>=3.13.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "tensorflow>=2.20.0",
]

[tool.ruff]
line-length = 82
target-version = "py311"
select = ["E", "F", "I"]
fix = true
